SSDM-13847: Fixing failing build on the jdk11 Jenkins server.